zokrates_cli/examples/compile_errors/too_many_return.zok
def main():
	return 1